base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-app
spec:
  hosts:
  - spring-app.example.com
  gateways:
  - spring-app-gateway
  http:
  - route:
    - destination:
        host: spring-app
        subset: version-a
      weight: 100
